@@ -12,12 +12,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.10.0</junit.version>
-        <javafx.version>22</javafx.version>
-        <java.version>22</java.version>
+        <javafx.version>17.0.9</javafx.version>
+        <java.version>17</java.version>
         <spring.version>6.1.4</spring.version>
         <spring.boot.version>3.2.3</spring.boot.version>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -163,9 +163,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>22</source>
-                    <target>22</target>
-                    <compilerArgs>--enable-preview
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -185,7 +185,6 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
-                            <executable>/Library/Java/JavaVirtualMachines/jdk-22.jdk/Contents/Home/bin/java</executable>
                             <options>
                                 <option>--add-opens</option>
                                 <option>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</option>
